refactoring hooks view

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1366,7 +1366,7 @@ button.-solid {
   padding-left: 2.2em;
 }
 
-.hook-row.headers {
+.hook-row.-headers {
   height: 3em;
   border-bottom: 1px solid var(--color-gray);
 }
