--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,7 @@
   --color-cyan: hsla(192, 100%, 50%, 1);
   --color-lightcyan: hsla(192, 100%, 75%, 1);
   --color-lavender: hsla(286, 29%, 55%, 1);
+  --color-scarlet: hsla(8, 100%, 50%, 1);
 
   // for status indications
   --color-red: hsla(353, 69%, 45%, 1);
