--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1362,7 +1362,7 @@ button.-solid {
     }
   }
   .chevron {
-    margin: 0 8px;
+    margin-left: 1em;
 
     transition: all 0.2s;
     transform-origin: 50% 49%;
@@ -1388,7 +1388,7 @@ button.-solid {
   margin-top: 0.3em;
   padding-top: 0.3em;
   padding-bottom: 0.3em;
-  padding-left: 36px; // match chevron size
+  // padding-left: 36px; // match chevron size
 
   border-bottom: 1px solid var(--color-gray);
 }
@@ -1400,9 +1400,6 @@ button.-solid {
 
   font-size: 18px;
 }
-.hooks .source-id {
-  min-width: 300px;
-}
 
 .hooks .row .preview {
   margin: 0.4em 0;
@@ -1410,15 +1407,49 @@ button.-solid {
   font-size: 14px;
 }
 
+.hook-success {
+  color: var(--color-green);
+}
+
+.hook-failure {
+  color: var(--color-scarlet);
+}
+
 .hooks .row .cell {
+  align-items: center;
   flex: 1;
+  justify-content: center;
 
   text-align: center;
 
   font-weight: 300;
 }
 
+.hooks .source-id {
+  min-width: 330px;
+}
+
+.hooks .filler-cell {
+  width: 80px;
+}
+
+.hooks .row .first-cell {
+  width: 80px;
+}
+
+.hooks .row .first-cell .chevron {
+  margin-right: 8px;
+}
+
 .hooks .row .cell.source-id {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.hooks .row .cell.source-id .text {
+  padding: 3px 12px;
+
   text-align: center;
 
   color: var(--color-offwhite);
@@ -1431,6 +1462,7 @@ button.-solid {
 
 .preview .status.failure {
   color: var(--color-red);
+  color: var(--color-scarlet);
 }
 
 .hooks .row .info {
@@ -1461,7 +1493,9 @@ button.-solid {
 
 .hooks .row .info.-failure,
 .hooks .row .info.-error {
-  border-left-color: var(--color-red);
+  // border-left-color: var(--color-red);
+  border-left-color: var(--color-scarlet);
+
 }
 
 .hooks .row .info .element span.-m-l,
@@ -1474,8 +1508,10 @@ button.-solid {
   margin-right: 0.4em;
 }
 
-.hooks .row .info .element span.-error {
-  color: var(--color-red);
+.hooks .row .info .element .error-label {
+  // color: var(--color-red);
+  color: var(--color-scarlet);
+
 }
 
 .hooks .row .info .element .hook-build-status.-pending {
@@ -1492,7 +1528,8 @@ button.-solid {
 
 .hooks .row .info .element .hook-build-status.-failure,
 .hooks .row .info .element .hook-build-status.-error {
-  color: var(--color-red);
+  // color: var(--color-red);
+  color: var(--color-scarlet);
 }
 
 .repo-settings {
