fix hook preview status test

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1388,8 +1388,6 @@ button.-solid {
   margin-top: 0.3em;
   padding-top: 0.3em;
   padding-bottom: 0.3em;
-  // padding-left: 36px; // match chevron size
-
   border-bottom: 1px solid var(--color-gray);
 }
 
@@ -1407,11 +1405,11 @@ button.-solid {
   font-size: 14px;
 }
 
-.hook-success {
+.hook-status.-success {
   color: var(--color-green);
 }
 
-.hook-failure {
+.hook-status.-failure {
   color: var(--color-scarlet);
 }
 
