--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1221,6 +1221,18 @@ button.-solid {
   color: var(--color-offwhite);
 
   font-family: var(--font-code);
+  > button {
+    font-size: 14px;
+    color: var(--color-offwhite);
+    background: none;
+    transition: none;
+    padding: 0;
+    font-family: inherit;
+    font-weight: 300;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .log.error {
