--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1195,10 +1195,16 @@ button.-solid {
   font-family: var(--font-code);
 }
 
+.loading-logs {
+  padding: 0.5em 0;
+  margin-left: 0.3em;
+  margin-top: 0.3em;
+}
+.logs-container {
+  padding: 1em 0;
+}
 .log {
   margin: 1px;
-  padding-bottom: 1em;
-  padding-top: 0.5em;
 
   background-color: var(--color-bg-darker);
 
@@ -1225,15 +1231,8 @@ button.-solid {
   color: var(--color-offwhite);
 
   font-family: var(--font-code);
-  > button {
-    font-size: 14px;
-    color: var(--color-cyan);
-    background: none;
-    transition: none;
-    padding: 0;
-    margin: 0;
-    font-family: inherit;
-    font-weight: 300;
+  > a {
+    text-decoration: none;
     &:hover {
       text-decoration: underline;
     }
