--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -776,9 +776,9 @@ button.-solid {
 }
 
 .build .error {
-  color: var(--color-red);
+  color: var(--color-scarlet);
 
-  font-size: 0.9em;
+  font-size: 16px;
 }
 
 .build .error .message{
@@ -1200,32 +1200,34 @@ button.-solid {
   margin-left: 0.3em;
   margin-top: 0.3em;
 }
+
 .logs-container {
-  padding: 1em 0;
-}
-.log {
-  margin: 1px;
-
   background-color: var(--color-bg-darker);
+  padding: 0.5em 0;
+}
 
+.logs {
   font-size: 14px;
   font-weight: 300;
 }
 
-.log .-code {
+.logs .line {
   margin: 0 0.5em;
+  display: flex;
 }
 
-.log .-code .-line {
+.logs .line .wrapper {
   padding-left: 1em;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
 }
 
-.log .-code .-focus {
+.logs .wrapper.-focus {
   background: var(--color-focus);
-  display: block;
 }
 
-.log .-code .-line-num {
+.logs .line .-line-num {
   margin-right: 1em;
 
   color: var(--color-offwhite);
@@ -1239,16 +1241,12 @@ button.-solid {
   }
 }
 
-.log.error {
-  padding-top: 0.8em;
-  padding-bottom: 0.8em;
-
-  color: var(--color-red);
-
-  font-size: 0.9em;
+.step-error {
+  color: var(--color-scarlet);
+  font-size: 14px;
 }
 
-.log.error .message{
+.step-error .message{
   margin-left: 0.2em;
 }
 
