--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1244,6 +1244,7 @@ button.-solid {
 .step-error {
   color: var(--color-scarlet);
   font-size: 14px;
+  margin-left: 1.5em;
 }
 
 .step-error .message{
